# ThreatLens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
backend/: .env.example  README.md  pyproject.toml
backend/src/threatlens/: __init__.py  storage_lock.py
backend/tests/: test_abuseipdb.py  test_aggregation.py  test_ai_explanation.py  test_api.py  test_api_contract.py  test_capec.py  test_confidence_scorer.py  test_cwe.py  test_detection.py  test_detection_engineering.py  test_engine.py  test_evidence_assembler.py  test_finding_engine.py  test_finding_rules.py  test_health.py  test_investigation.py  test_investigation_context.py  test_malwarebazaar.py  test_mitre_attack.py  test_network_generators.py  test_normalize.py  test_nvd.py  test_otx.py  test_providers.py  test_reasoning_engine.py  test_reasoning_models.py  test_recommendation_engine.py  test_recommendation_rules.py  test_reference.py  test_results.py  test_siem_generators.py  test_sigma_generator.py  test_urlhaus.py  test_yara_generator.py
backend/tests/benchmark/: __init__.py  golden.json  perf.py  scenarios.py  test_benchmark.py  test_perf_smoke.py
backend/tests/cases/: factories.py  test_api.py  test_models.py  test_no_regression.py  test_service.py  test_storage.py
backend/tests/correlation/: __init__.py  corpus.py  factories.py  golden.json  perf.py  test_api.py  test_engine.py  test_golden.py  test_models.py  test_perf_smoke.py  test_registry.py  test_rules.py  test_service.py  test_summary.py
backend/tests/detection/: __init__.py  corpus.py  golden.json  harness.py  perf.py  test_detection_freeze.py  test_perf_smoke.py  test_validators.py  validate.py
backend/tests/detection_library/: __init__.py  corpus.py  golden.json  harness.py  perf.py  test_api.py  test_golden.py  test_library.py  test_licensing.py  test_matching.py  test_normalize.py  test_perf_smoke.py  test_providers.py  test_similarity.py  test_sync.py
backend/tests/exposure/: conftest.py  test_api.py  test_cache.py  test_censys_provider.py  test_config.py  test_greynoise_provider.py  test_models.py  test_provider.py  test_registry.py  test_service.py  test_shodan_provider.py  test_summary.py
backend/tests/exposure_validation/: __init__.py  corpus.py  fakes.py  golden.json  harness.py  perf.py  test_exposure_freeze.py  test_perf_smoke.py
backend/tests/graph/: corpus.py  factories.py  golden.json  test_api.py  test_engine.py  test_golden.py  test_models.py  test_no_regression.py  test_service.py
backend/tests/identity/: __init__.py  test_api.py  test_cache.py  test_config.py  test_models.py  test_provider.py  test_registry.py  test_service.py  test_summary.py
backend/tests/intel_collections/: factories.py  test_api.py  test_models.py  test_no_regression.py  test_normalize.py  test_service.py  test_storage.py
backend/tests/reporting/: factories.py  test_api.py  test_compatibility_matrix.py  test_models.py  (+2 more)
(+370 files in other folders)
