[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "threatlens"
version = "0.1.0"
description = "ThreatLens — Universal Entity Detection Engine (Phase 1.1)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.6",
    "tldextract>=5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/threatlens"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
packages = ["threatlens"]
mypy_path = "src"
strict = true
